# langraph_desafios

./: README.md  main.py  pyproject.toml
src/desafios/: ex1.py
src/ex00/: main.py
src/ex02/: ex2.py  ex3.py  main.py
src/ex03/: condicional.py  ex1.py
src/ex04/: chat2.py  chatbot.py
src/ex05/: ex1.py
